--- a/templates/profiles/base.html
+++ b/templates/profiles/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Admin Dashboard</title>
+  <title>Auth</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,131 +41,11 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="{% url 'list_book' %}" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
-        <span class="d-none d-lg-block">MyBookAdmin</span>
+      <a href="#" class="logo d-flex align-items-center">
+        <span class="d-none d-lg-block">E Learn</span>
       </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
-
-    <div class="search-bar">
-      <form class="search-form d-flex align-items-center" method="get" action="{% url 'search_book' %}">
-        <input type="text" name="q" placeholder="Search" title="Enter search keyword">
-        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-      </form>
-    </div><!-- End Search Bar -->
-
-    <nav class="header-nav ms-auto">
-      <ul class="d-flex align-items-center">
-
-        <li class="nav-item d-block d-lg-none">
-          <a class="nav-link nav-icon search-bar-toggle " href="#">
-            <i class="bi bi-search"></i>
-          </a>
-        </li><!-- End Search Icon-->
-
-        <li class="nav-item dropdown pe-3">
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <span class="d-none d-md-block dropdown-toggle ps-2">{{user.username}}</span>
-          </a><!-- End Profile Iamge Icon -->
-
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-            <li class="dropdown-header">
-              <h6>{{user.username}}</h6>
-              <span>Admin</span>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="{% url 'list_book' %}">
-                <i class="bi bi-home"></i>
-                <span>Dashboard</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="{% url 'list_user' %}">
-                <i class="bi bi-question-user"></i>
-                <span>Users</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="{% url 'logout' %}">
-                <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
-              </a>
-            </li>
-
-          </ul><!-- End Profile Dropdown Items -->
-        </li><!-- End Profile Nav -->
-
-      </ul>
-    </nav><!-- End Icons Navigation -->
-
   </header><!-- End Header -->
-
-  <!-- ======= Sidebar ======= -->
-  <aside id="sidebar" class="sidebar">
-
-    <ul class="sidebar-nav" id="sidebar-nav">
-
-      <li class="nav-item">
-        <a class="nav-link " href="{% url 'list_book' %}">
-          <i class="bi bi-grid"></i>
-          <span>Dashboard</span>
-        </a>     
-      <li class="nav-heading">Pages</li>
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'list_user' %}">
-          <i class="bi bi-person"></i>
-          <span>Users</span>
-        </a>
-      </li><!-- End User Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'create_book' %}">
-          <i class="bi bi-book"></i>
-          <span>Create Book</span>
-        </a>
-      </li><!-- End Create Book Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'create_author' %}">
-          <i class="bi bi-pen"></i>
-          <span>Add Author</span>
-        </a>
-      </li><!-- End Add Author Nav -->
-
-      <li class="nav-item"></li>
-        <a class="nav-link collapsed" href="{% url 'register' %}?admin=True">
-          <i class="bi bi-file-person"></i>
-          <span>Add Admin</span>
-        </a>
-      </li><!-- End Admin nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'register' %}?admin=False">
-          <i class="bi bi-card-list"></i>
-          <span>Register</span>
-        </a>
-      </li><!-- End Register Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'login' %}">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
-        </a>
-      </li><!-- End Login Page Nav -->
-    </ul>
-  </aside><!-- End Sidebar-->
 
   <main id="main" class="main">
     
