--- a/templates/profiles/login.html
+++ b/templates/profiles/login.html
@@ -17,7 +17,7 @@
                 <input type="password" class="form-control" name="pass" id="pass" required>
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
-            <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
+            <a href="{% url 'register' %}?type=STUDENT" class="btn btn-primary">Register</a>
         </form>
     </div>
 </div>
