--- a/templates/profiles/register.html
+++ b/templates/profiles/register.html
@@ -34,6 +34,7 @@
             <input type="password" class="form-control" name="cpass" id="cpass" required>
             </div>
             <button type="submit" class="btn btn-primary" onclick="regAlert()">Register</button>
+            <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
         </form>
     </div> 
 </div>
