initial_manager_dashboard

--- a/templates/profiles/base.html
+++ b/templates/profiles/base.html
@@ -46,24 +46,11 @@
       </a>
     </div><!-- End Logo -->
   </header><!-- End Header -->
-
-  <main id="main" class="main">
-    
+  <div style="margin-top: 10rem;">
   {% block content %}
   {% endblock %}
+  </div>
 
-  </main><!-- End #main -->
-
-
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>MyBookAdmin</span></strong>. All Rights Reserved
-    </div>
-  </footer><!-- End Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="{% static 'assets/vendor/apexcharts/apexcharts.min.js' %}"></script>
