--- a/templates/manager/base.html
+++ b/templates/manager/base.html
@@ -149,7 +149,7 @@
       </li><!-- End Trainer Page Nav -->
       <li class="nav-item">
         <!--url 'create_course' -->
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="{% url 'create_course' %}">
           <i class="bi bi-book"></i>
           <span>Add Course</span>
         </a>
