--- a/templates/manager/home.html
+++ b/templates/manager/home.html
@@ -36,8 +36,9 @@
             <td>{{course.price}}</td>
             <td>
                 <a href="#" class="btn btn-primary"> Details</a>
-                <a href="#" class="btn btn-success"> Update </a> 
-                <a href="#" class="btn btn-danger"> Delete </a>
+                <a href="#" class="btn btn-success"> Add Chapter </a> 
+                <a href="#" class="btn btn-warning"> Remove Chapter </a> 
+                <a href="#" class="btn btn-danger"> Delete Course </a>
             </td>
         </tr>
         {% endfor %}
