--- a/templates/manager/base.html
+++ b/templates/manager/base.html
@@ -211,6 +211,7 @@
 
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
+  <script src="{% static 'assets/js/scripts.js' %}"></script>
 
 </body>
 
