--- a/templates/manager/home.html
+++ b/templates/manager/home.html
@@ -37,7 +37,7 @@
             <td>
                 <a href="{% url 'course_details' course.id %}" class="btn btn-primary"> Details</a>
                 <a href="{% url 'add_chapter' course.id %}" class="btn btn-success"> Add Chapter </a> 
-                <a href="#" class="btn btn-danger"> Delete Course </a>
+                <a href="{% url 'delete_course' course.id %}" class="btn btn-danger"> Delete Course </a>
             </td>
         </tr>
         {% endfor %}
