--- a/templates/student/courses.html
+++ b/templates/student/courses.html
@@ -8,7 +8,8 @@
   <h1>Home</h1>
   <nav>
       <ol class="breadcrumb">
-          <li class="breadcrumb-item active"><a href="{% url 'manager_home' %}">Home</a></li>
+          <li class="breadcrumb-item "><a href="{% url 'student_home' %}">Home</a></li>
+          <li class="breadcrumb-item active">Purchase Course</li>
       </ol>
   </nav>
 </div><!-- End Page Title -->
@@ -16,13 +17,14 @@
 {{msg}}
 {% endfor %}
 
-{%if user.is_authenticated and user.profile.type == 'MANAGER' %}
+{%if user.is_authenticated %}
 <table class="table">
     <thead>
         <tr>
             <th scope="col">#</th>
             <th scope="col">Course</th>
             <th scope="col">Trainer</th>
+            <th scope="col">Price</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
@@ -34,7 +36,8 @@
             <td>{{course.trainer}}</td>
             <td>{{course.price}}</td>
             <td>
-                <a href="#" class="btn btn-primary"> Go to course</a>
+                <a href="#" class="btn btn-primary"> Buy Course</a>
+                <a href="{% url 'course_trainer' course.id %}" class="btn btn-success"> Trainer Details </a> 
             </td>
         </tr>
         {% endfor %}
