--- a/templates/manager/search_course.html
+++ b/templates/manager/search_course.html
@@ -1,5 +1,5 @@
 
-{% extends 'student/base.html' %}
+{% extends 'manager/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -8,7 +8,8 @@
   <h1>Home</h1>
   <nav>
       <ol class="breadcrumb">
-          <li class="breadcrumb-item active"><a href="{% url 'manager_home' %}">Home</a></li>
+          <li class="breadcrumb-item "><a href="{% url 'manager_home' %}">Home</a></li>
+          <li class="breadcrumb-item active">Search</li>
       </ol>
   </nav>
 </div><!-- End Page Title -->
@@ -23,6 +24,7 @@
             <th scope="col">#</th>
             <th scope="col">Course</th>
             <th scope="col">Trainer</th>
+            <th scope="col">Price</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
@@ -34,7 +36,9 @@
             <td>{{course.trainer}}</td>
             <td>{{course.price}}</td>
             <td>
-                <a href="#" class="btn btn-primary"> Go to course</a>
+                <a href="{% url 'course_details' course.id %}" class="btn btn-primary"> Details</a>
+                <a href="{% url 'add_chapter' course.id %}" class="btn btn-success"> Add Chapter </a> 
+                <a href="{% url 'delete_course' course.id %}" class="btn btn-danger"> Delete Course </a>
             </td>
         </tr>
         {% endfor %}
