--- a/templates/student/home.html
+++ b/templates/student/home.html
@@ -33,7 +33,7 @@
             <td>{{course.course_name}}</td>
             <td>{{course.trainer}}</td>
             <td>
-                <a href="#" class="btn btn-primary"> Go to course</a>
+                <a href="{% url 'goto_course' course.id %}" class="btn btn-primary"> Go to course</a>
             </td>
         </tr>
         {% endfor %}
