feat: trainer_rating_view

--- a/templates/student/courses.html
+++ b/templates/student/courses.html
@@ -44,7 +44,7 @@
                         </form>
                     </div>
                     <div class="col-9 justify-content-start">
-                        <a href="{% url 'course_trainer' course.id %}" class="btn btn-success"> Trainer Details </a> 
+                        <a href="{% url 'check_trainer' course.trainer.id %}" class="btn btn-success"> Trainer Details </a> 
                     </div>
                 </div>
             </td>
