--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -196,6 +196,7 @@
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
   <script src="{% static 'assets/js/scripts.js' %}"></script>
+  <script src ="{% static 'assets/js/progressBar.js' %}"></script>
 
 </body>
 
