--- a/templates/trainer/base.html
+++ b/templates/trainer/base.html
@@ -168,6 +168,7 @@
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
   <script src="{% static 'assets/js/scripts.js' %}"></script>
+  <script src ="{% static 'assets/js/progressBar.js' %}"></script>
 
 </body>
 
