--- a/templates/trainer/student_list.html
+++ b/templates/trainer/student_list.html
@@ -7,7 +7,7 @@
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'trainer_home' %}">Home</a></li>
-                <li class="breadcrumb-item active">course students</li>
+                <li class="breadcrumb-item active"> {{course.course_name}} students</li>
             </ol>
         </nav>
       </div><!-- End Page Title -->
@@ -32,7 +32,7 @@
                   <td>{{student.first_name}}</td>
                   <td>{{student.last_name}}</td>
                   <td>
-                      <a href="#" class="btn btn-primary"> Student Progress</a>
+                      <a href="{% url 'course_student_progress' course.id student.id %}" class="btn btn-primary"> Student Progress</a>
                   </td>
               </tr>
               {% endfor %}
