add trainer update course feature

--- a/templates/student/goto_course.html
+++ b/templates/student/goto_course.html
@@ -14,7 +14,7 @@
     <div class="form-control">    
         <div class="video-player m-auto">
             <h4 id="chapter_name">Chapter: {{current.chapter_name}}</h4>
-            <video id="main_video" style="height: 40rem; width: 60rem;" controls>
+            <video id="main_video" style="height: 40vh; width: 60vh;" controls>
                 <source src="{{current.chapter_video.url}}" type="video/mp4">
             </video>
         </div>
