--- a/templates/manager/course_details.html
+++ b/templates/manager/course_details.html
@@ -2,22 +2,22 @@
 {% load static %}
 {% block content %}
 <div class="pagetitle">
-    <h1>Add Chapter</h1>
+    <h1>Course Details</h1>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'manager_home' %}">Home</a></li>
-            <li class="breadcrumb-item active">Add Chapter</li>
+            <li class="breadcrumb-item active">Course Details</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
-<div class="container m-auto">
+<div class="container m-auto" style="width: 75vh; height: 60vh;">
     <div class="form-control">
         <h4 >Course: {{course.course_name}}</h4>
         <h4>Price: {{course.price}}</h4>
     
         <div class="video-player m-auto">
             <h4 id="chapter_name">Chapter: {{current.chapter_name}}</h4>
-            <video id="main_video" controls>
+            <video id="main_video" style="width: 60vh; height: 40vh;" controls>
                 <source src="{{current.chapter_video.url}}" type="video/mp4">
             </video>
         </div>
