--- a/templates/trainer/home.html
+++ b/templates/trainer/home.html
@@ -31,7 +31,7 @@
                   <td>{{course.course_name}}</td>
                   <td>{{course.price}}</td>
                   <td>
-                      <a href="#" class="btn btn-primary"> Update Course</a>
+                      <a href="{% url 'update_course' course.id %}" class="btn btn-primary"> Update Course</a>
                       <a href="{% url 'course_student_list' course.id %}" class="btn btn-warning">View Students</a>
                   </td>
               </tr>
