--- a/templates/manager/course_details.html
+++ b/templates/manager/course_details.html
@@ -22,6 +22,7 @@
             </video>
         </div>
         <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">All Chapters</button>
+        <a href="{% url 'mng_course_student_list' course.id %}" class="btn btn-primary">Student Details</a>
 
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
         <div class="offcanvas-header">
