add student payment details update for manager

--- a/templates/student/goto_course.html
+++ b/templates/student/goto_course.html
@@ -59,4 +59,7 @@
         </div>
     </div>
 </div>
+<script src="{% static 'assets/vendor/chart.js/chart.umd.js' %}"></script>
+<script src="{% static 'assets/vendor/echarts/echarts.min.js' %}"></script>
+<script src ="{% static 'assets/js/progressBar.js' %}"></script>
 {% endblock %}
