--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -173,7 +173,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>MyBookAdmin</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>E Learn</span></strong>. All Rights Reserved
     </div>
   </footer><!-- End Footer -->
 
