--- a/templates/trainer/base.html
+++ b/templates/trainer/base.html
@@ -133,7 +133,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>MyBookAdmin</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>E Learn</span></strong>. All Rights Reserved
     </div>
   </footer><!-- End Footer -->
 
